--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       class="object-contain z-0 aspect-[6.13] min-w-[240px] w-[406px] "
     />
     </a>
-                <a href="https://drive.google.com/file/d/1DtY62sD67iHN08WpD1-lAcuhcDFfPNAL/view?usp=sharing" class="overflow-hidden shrink px-9 py-6 w-auto font-semibold bg-cyan-300 rounded-2xl min-w-[200px] max-md:px-5 " role="button ">Download CV</a
+                <a href="https://drive.google.com/file/d/1VGW17bLRYka9GzzdJVbf-Q9gnTAJ3eYy/view?usp=drive_link" class="overflow-hidden shrink px-9 py-6 w-auto font-semibold bg-cyan-300 rounded-2xl min-w-[200px] max-md:px-5 " role="button ">Download CV</a
     >
     <!-- <p
       class="overflow-hidden absolute z-10 grow shrink w-3.5 h-10 left-[183px] top-[220px] "
